--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,8 @@
 			<li><a href="/research">Research</a></li>
 	        	<li><a href="/pubs">Publications</a></li>
         		<li><a href="/cv">CV</a></li>
+			<li><a href="/blog">Blog</a></li>
+
     		</ul>
 		</nav>
 		<div class="container">
